--- a/local.settings.json
+++ b/local.settings.json
@@ -1,9 +1,10 @@
 {
   "IsEncrypted": false,
   "Values": {
-    "AzureWebJobsStorage": "",
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "AzureWebJobsSecretStorageType": "Files",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
-    "1ffab7_STORAGE": "UseDevelopmentStorage=true",
-    "SqlConnectionString": "Server=tcp:youtubesongs.database.windows.net,1433;Initial Catalog=youtubesongs;Persist Security Info=False;User ID=bharathj88;Password=Murugan2110$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "SqlConnectionString": "Server=tcp:youtubesongs.database.windows.net,1433;Initial Catalog=youtubesongs;Persist Security Info=False;User ID=bharathj88;Password=Murugan2110$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "Youtube_API_Token":"AIzaSyCFJfbKV35iasY3uY0t1NR4ag_gAa3wFG8"
   }
 }
